--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,76 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.text-field-lbl {
+  min-width: 140px;
+  padding: 5px 10px;
+  background-color: #ccc;
+}
+
+.frm {
+  text-align: left;
+  background-color: #fff;
+  padding: 20px;
+}
+
+.frm-lbl {
+  font-weight: bold;
+  font-size: 14px;
+  margin-bottom: 3px;
+}
+
+.md-conf {
+  position: absolute;
+  background: rgb(0 0 0 / 40%);
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  margin: 0;
+  display: flex;
+  opacity: 0;
+  z-index: -1;
+  transition: opacity 0.4s ease;
+  justify-content: center;
+  align-items: center;
+}
+
+.md-content {
+  background: #fff;
+    min-width: 400px;
+    min-height: 140px;
+    border-radius: 12px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+}
+
+.md-title {
+  font-weight: bold;
+}
+
+.md-text {
+  flex: 3;
+}
+
+.md-cmd {
+  display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    flex: 1;
+    max-height: 40px;
+}
+
+.md-cmd-btn {
+  min-width: 80px;
+}
+
+.md-cmd-btn:not(:first-child) {
+  margin-left: 15px;
+}
+
+.md--show {
+  opacity: 1;
+  z-index: 1;
+}
